@@ -20,6 +20,7 @@
 	bugfix in inline functions : handle class type parameters and method type parameters
 	fixed issue with Int default value for Float parameter
 	flash9 : bugfix when using the retval after setting a closure variable
+	added flash.VMem API for flash10 alchemy opcodes access
 
 2008-10-04: 2.01
 	fixed php.Sys
